--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -1,5 +1,135 @@
 /* colors */
-/* styles */
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video {
+  border: 0;
+  font: inherit;
+  font-size: 62.5%;
+  margin: 0;
+  padding: 0;
+  vertical-align: baseline;
+}
+
+/* HTML5 display-role reset for older browsers */
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
+  display: block;
+}
+
+body {
+  line-height: 1.3;
+  margin: 0;
+}
+
+ol,
+ul {
+  list-style: none;
+}
+
+blockquote,
+q {
+  quotes: none;
+}
+
+blockquote:before,
+blockquote:after,
+q:before,
+q:after {
+  content: none;
+}
+
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+
 .container {
   -webkit-box-align: center;
       -ms-flex-align: center;
@@ -12,19 +142,32 @@
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  -webkit-box-pack: start;
-      -ms-flex-pack: start;
-          justify-content: flex-start;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  height: 100%;
+}
+
+.container .hidden {
+  display: none;
+}
+
+.container .show {
+  cursor: pointer;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
 }
 
 .container .up {
-  margin-bottom: 10rem;
+  margin-bottom: 5rem;
 }
 
 .container .up h1 {
   color: #a16306;
   font-size: 3.6rem;
   font-weight: bold;
+  margin-top: 5rem;
 }
 
 .container .middle-container {
@@ -34,13 +177,13 @@
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: horizontal;
+  -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
-  font-family: 'Leckerli One', cursive;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 .container .middle-container .left {
@@ -51,12 +194,13 @@
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  -ms-flex-item-align: start;
-      align-self: flex-start;
+  -ms-flex-item-align: center;
+      align-self: center;
   -webkit-box-flex: 1;
       -ms-flex: 1;
           flex: 1;
-  padding: 0 3rem;
+  padding: 0 10rem;
+  width: 40%;
 }
 
 .container .middle-container .left .date-container {
@@ -73,16 +217,16 @@
 }
 
 .container .middle-container .left .date-container .date {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: start;
-      -ms-flex-pack: start;
-          justify-content: flex-start;
   -ms-flex-item-align: end;
       align-self: flex-end;
   color: #a16306;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
   font-size: 1.3rem;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
   margin-right: 5px;
 }
 
@@ -93,7 +237,7 @@
 .container .middle-container .left p {
   background-color: #0c0c01;
   color: #a16306;
-  font-family: "Montserrat";
+  font-family: "Leckerli One", cursive;
   font-size: 1.2rem;
   width: 100%;
 }
@@ -107,20 +251,25 @@
   -webkit-box-flex: 1;
       -ms-flex: 1;
           flex: 1;
+  padding: 0 20rem;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+  -ms-flex-item-align: center;
+      align-self: center;
 }
 
 .container .middle-container .right img {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -ms-flex-item-align: end;
-      align-self: flex-end;
+  -ms-flex-item-align: center;
+      align-self: center;
   height: 20rem;
   margin: 0;
+  width: 60%;
+  margin-top: 3rem;
 }
 
 .container .middle-container .right p {
@@ -132,7 +281,43 @@
   color: #a16306;
 }
 
-.container .middle-container .right form {
+.container .bottom {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin: 5rem 20rem;
+  height: 100%;
+}
+
+.container .bottom button.date-picker {
+  background-color: #a16306;
+  border-radius: 5px;
+  color: #0c0c01;
+  font-size: 1.2rem;
+  height: 5rem;
+  margin-top: 15px;
+}
+
+.container .bottom button.date-picker span {
+  color: #0c0c01;
+  font-weight: bold;
+  cursor: pointer;
+  font-size: 2rem;
+  margin-right: 2px;
+  height: 4rem;
+}
+
+.container .bottom form {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -148,49 +333,10 @@
           justify-content: center;
 }
 
-.container .middle-container .right form input {
+.container .bottom form input {
   color: #a16306;
   cursor: pointer;
-  font-size: 2rem;
+  font-size: 25px;
   text-align: center;
-}
-
-.container .middle-container .right form .date-picker {
-  background-color: #a16306;
-  border-radius: 5px;
-  color: #0c0c01;
-  font-size: 1.2rem;
-  height: 40px;
-  margin-bottom: 10px;
-  margin-top: 15px;
-}
-
-.container .middle-container .right form .date-picker span {
-  color: #a16306;
-  cursor: pointer;
-  font-size: 1.4rem;
-  margin-right: 2px;
-}
-
-.container .middle-container .right form .hidden {
-  display: none;
-}
-
-.container .middle-container .right form .show {
-  cursor: pointer;
-  display: block;
-}
-
-.container .bottom {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  margin-bottom: 40rem;
 }
 /*# sourceMappingURL=Card.css.map */
