--- a/src/components/Card/Card.scss
+++ b/src/components/Card/Card.scss
@@ -1,40 +1,185 @@
 /* colors */
 $dark-orange: rgb(161, 99, 6);
 $black: rgb(12, 12, 1);
+// styles
 
-/* styles */
+// reset:
+// http://meyerweb.com/eric/tools/css/reset/    v2.0 | 20110126
+// License: none (public domain)
+
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video {
+  border: 0;
+  font: inherit;
+  font-size: 62.5%;
+  margin: 0;
+  padding: 0;
+  vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
+  display: block;
+}
+
+body {
+  line-height: 1.3;
+  margin: 0;
+}
+
+ol,
+ul {
+  list-style: none;
+}
+
+blockquote,
+q {
+  quotes: none;
+}
+
+blockquote:before,
+blockquote:after,
+q:before,
+q:after {
+  content: none;
+}
+
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+}
 
 .container {
   align-items: center;
   background-color: $black;
   display: flex;
   flex-direction: column;
+
+  justify-content: center;
+  height: 100%;
+
+  .hidden {
+    display: none;
+  }
+
+  .show {
+    cursor: pointer;
+    display: flex;
+  }
+
   
-  justify-content: flex-start;
-
-
   .up {
-    margin-bottom: 10rem;
+    margin-bottom: 5rem;
+
     h1 {
       color: $dark-orange;
       font-size: 3.6rem;
       font-weight: bold;
+      margin-top: 5rem;
     }
   }
 
   .middle-container {
     align-items: center;
     display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    font-family: 'Leckerli One', cursive;
+    flex-direction: column;
+    justify-content: center;
 
     .left {
       display: flex;
       flex-direction: column;
-      align-self: flex-start;
+      align-self: center;
       flex: 1;
-      padding: 0 3rem;
+      padding: 0 10rem;
+      width: 40%;
 
       .date-container {
         align-items: center;
@@ -42,11 +187,11 @@ $black: rgb(12, 12, 1);
         flex-direction: column;
 
         .date {
-          display: flex;
-          justify-content: flex-start;
           align-self: flex-end;
           color: $dark-orange;
+          display: flex;
           font-size: 1.3rem;
+          justify-content: flex-start;
           margin-right: 5px;
         }
       }
@@ -57,7 +202,7 @@ $black: rgb(12, 12, 1);
       p {
         background-color: $black;
         color: $dark-orange;
-        font-family: "Montserrat";
+        font-family: "Leckerli One", cursive;
         font-size: 1.2rem;
         width: 100%;
       }
@@ -67,20 +212,51 @@ $black: rgb(12, 12, 1);
       align-self: flex-start;
       display: flex;
       flex: 1;
+      padding: 0 20rem;
       flex-direction: column;
+      align-self: center;
       img {
         display: flex;
-        align-self: flex-end;
+        align-self: center;
         height: 20rem;
         margin: 0;
+        width: 60%;
+        margin-top: 3rem;
       }
 
-      p{
+      p {
         display: flex;
         align-self: center;
         color: $dark-orange;
       }
+    }
+  }
 
+  .bottom {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: 5rem 20rem;
+    height: 100%;
+
+    button.date-picker {
+      background-color: $dark-orange;
+      border-radius: 5px;
+      color: $black;
+      font-size: 1.2rem;
+      height: 5rem;
+      margin-top: 15px;
+
+      span {
+        color: $black;
+        font-weight: bold;
+        cursor: pointer;
+        font-size: 2rem;
+        margin-right: 2px;
+        height: 4rem;
+      }
+    }
 
     form {
       align-items: center;
@@ -91,45 +267,12 @@ $black: rgb(12, 12, 1);
       input {
         color: $dark-orange;
         cursor: pointer;
-        font-size: 2rem;
+        font-size: 25px;
         text-align: center;
-      }
+        
 
-    
-
-      .date-picker {
-        background-color: $dark-orange;
-        border-radius: 5px;
-        color: $black;
-        font-size: 1.2rem;
-        height: 40px;
-        margin-bottom: 10px;
-        margin-top: 15px;
-
-        span {
-          color: $dark-orange;
-          cursor: pointer;
-          font-size: 1.4rem;
-          margin-right: 2px;
-        }
-      }
-      .hidden {
-        display: none;
-      }
-
-      .show {
-        cursor: pointer;
-        display: block;
+       
       }
     }
-    }
-  }
-
-  .bottom {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-bottom: 40rem;
-
   }
 }
