--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -82,7 +82,7 @@ audio,
 video {
   border: 0;
   font: inherit;
-  font-size: 62.5%;
+  font-size: 14px;
   margin: 0;
   padding: 0;
   vertical-align: baseline;
@@ -268,7 +268,8 @@ table {
       align-self: center;
   height: 20rem;
   margin: 0;
-  width: 60%;
+  width: 100%;
+  max-width: 40rem;
   margin-top: 3rem;
 }
 
@@ -336,7 +337,7 @@ table {
 .container .bottom form input {
   color: #a16306;
   cursor: pointer;
-  font-size: 25px;
+  font-size: 23px;
   text-align: center;
 }
 /*# sourceMappingURL=Card.css.map */
