moved the input away from the button a bit

--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -332,6 +332,7 @@ table {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  margin-top: 3rem;
 }
 
 .container .bottom form input {
