--- a/src/components/Card/Card.scss
+++ b/src/components/Card/Card.scss
@@ -269,6 +269,7 @@ table {
       display: flex;
       flex-direction: column;
       justify-content: center;
+      margin-top: 3rem;
 
       input {
         color: $dark-orange;
