--- a/src/components/Card/Card.scss
+++ b/src/components/Card/Card.scss
@@ -203,6 +203,8 @@ table {
 
       h3 {
         color: $dark-orange;
+        font-weight: bold;
+        margin-bottom: 1rem;
       }
       p {
         background-color: $black;
