first part is finished

--- a/src/components/Card/Card.scss
+++ b/src/components/Card/Card.scss
@@ -230,6 +230,7 @@ table {
         margin: 0;
         width: 100%;
         max-width: 40rem;
+        min-width: 30rem;
         margin-top: 3rem;
         
       }
