--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -168,6 +168,9 @@ table {
   font-size: 3.6rem;
   font-weight: bold;
   margin-top: 5rem;
+  padding: 0 8rem;
+  min-width: 30rem;
+  max-width: 30rem;
 }
 
 .container .middle-container {
