--- a/src/components/Card/Card.scss
+++ b/src/components/Card/Card.scss
@@ -169,6 +169,11 @@ table {
       font-size: 3.6rem;
       font-weight: bold;
       margin-top: 5rem;
+      padding: 0 8rem;
+      min-width: 30rem;
+      max-width: 30rem;
+
+
     }
   }
 
@@ -205,6 +210,7 @@ table {
         color: $dark-orange;
         font-weight: bold;
         margin-bottom: 1rem;
+
       }
       p {
         background-color: $black;
