--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,12 @@
 .App {
   text-align: justify;
-  font-family: 'Poppins', sans-serif;
+  width: 100%;
+  margin: 0;
+  display: flex;
+  flex: 1;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 .App-logo {
