--- a/src/components/Card/Card.scss
+++ b/src/components/Card/Card.scss
@@ -146,10 +146,9 @@ table {
   background-color: $black;
   display: flex;
   flex-direction: column;
- width: 100%;
-  margin:0;
-  flex: 1;
-
+  align-items: center;
+  align-self: center;
+  width: 100%;
   justify-content: center;
   height: 100%;
 
@@ -165,13 +164,18 @@ table {
   
   .up {
     margin-bottom: 5rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    align-self: center;
+
 
     h1 {
       color: $dark-orange;
       font-size: 3.6rem;
       font-weight: bold;
       margin-top: 5rem;
-      padding: 0 8rem;
+      padding: 0 5rem;
       min-width: 30rem;
       max-width: 30rem;
 
@@ -180,19 +184,23 @@ table {
   }
 
   .middle-container {
-    align-items: center;
     display: flex;
     flex-direction: column;
+    display: flex;
+    align-items: center;
+    align-self: center;
     justify-content: center;
     width: 100%;
+    flex:1;
+
 
     .first {
       display: flex;
       flex-direction: column;
       align-self: center;
-    
       flex: 1;
-      padding: 0 10rem;
+      
+  
     
 
       .date-container {
@@ -205,8 +213,7 @@ table {
           color: $dark-orange;
           display: flex;
           font-size: 1.3rem;
-          justify-content: flex-start;
-          margin-right: 5px;
+          justify-content: flex-end;
         }
       }
 
@@ -217,27 +224,26 @@ table {
 
       }
       p {
+        display: flex;
+        align-self: center;
         background-color: $black;
         color: $dark-orange;
         font-size: 1.2rem;
-        width: 100%;
+        max-width: 40rem;
       }
     }
 
     .second {
-      align-self: flex-start;
+      align-self: center;
       display: flex;
       flex: 1;
-      padding: 0 20rem;
       flex-direction: column;
-      align-self: center;
      
       img {
         display: flex;
         align-self: center;
         height: 20rem;
         margin: 0;
-        width: 100%;
         max-width: 40rem;
         min-width: 30rem;
         margin-top: 3rem;
@@ -261,6 +267,7 @@ table {
     align-items: center;
     margin: 5rem 10rem;
     height: 100%;
+    width: 100%;
 
     button.date-picker {
       background-color: $dark-orange;
@@ -275,7 +282,6 @@ table {
         font-weight: bold;
         cursor: pointer;
         font-size: 2rem;
-        margin-right: 2px;
         height: 4rem;
         
       }
@@ -291,7 +297,7 @@ table {
       input {
         color: $dark-orange;
         cursor: pointer;
-        font-size:23px;
+        font-size:3rem;
         text-align: center;
       
       }
