--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -185,8 +185,15 @@ table {
   font-weight: bold;
   margin-top: 5rem;
   padding: 0 5rem;
-  min-width: 30rem;
   max-width: 30rem;
+}
+
+@media (max-width: 600px) {
+  .container .up h1 {
+    font-size: 2.3em;
+    max-width: 20rem;
+    margin: 1rem 3rem;
+  }
 }
 
 .container .middle-container {
@@ -225,6 +232,14 @@ table {
   -webkit-box-flex: 1;
       -ms-flex: 1;
           flex: 1;
+}
+
+@media (max-width: 600px) {
+  .container .middle-container .first {
+    font-size: 2.3em;
+    max-width: 27rem;
+    margin: 1rem 3rem;
+  }
 }
 
 .container .middle-container .first .date-container {
@@ -295,8 +310,16 @@ table {
   height: 20rem;
   margin: 0;
   max-width: 40rem;
-  min-width: 30rem;
   margin-top: 3rem;
+}
+
+@media (max-width: 700px) {
+  .container .middle-container .second img {
+    font-size: 2.3em;
+    max-width: 20rem;
+    max-height: 15rem;
+    margin: 1rem 3rem;
+  }
 }
 
 .container .middle-container .second p {
