--- a/src/components/Card/Card.scss
+++ b/src/components/Card/Card.scss
@@ -176,8 +176,16 @@ table {
       font-weight: bold;
       margin-top: 5rem;
       padding: 0 5rem;
-      min-width: 30rem;
       max-width: 30rem;
+      @media (max-width: 600px) {
+
+      
+          font-size: 2.3em;
+          max-width: 20rem;
+          margin : 1rem 3rem;
+
+      
+      }
 
 
     }
@@ -192,17 +200,25 @@ table {
     justify-content: center;
     width: 100%;
     flex:1;
+  
+      
 
+  
+  
 
     .first {
       display: flex;
       flex-direction: column;
       align-self: center;
       flex: 1;
-      
-  
-    
+      @media (max-width: 600px) {
 
+      
+        font-size: 2.3em;
+        max-width: 27rem;
+        margin : 1rem 3rem;
+      }
+  
       .date-container {
         align-items: center;
         display: flex;
@@ -234,20 +250,32 @@ table {
     }
 
     .second {
+
       align-self: center;
       display: flex;
       flex: 1;
       flex-direction: column;
-     
+      
       img {
         display: flex;
         align-self: center;
         height: 20rem;
         margin: 0;
         max-width: 40rem;
-        min-width: 30rem;
         margin-top: 3rem;
-        
+
+        @media (max-width: 700px) {
+
+      
+          font-size: 2.3em;
+          max-width: 20rem;
+          max-height: 15rem;
+
+          margin : 1rem 3rem;
+
+      
+      }
+      
       }
 
       p {
