--- a/src/components/Card/card.css
+++ b/src/components/Card/card.css
@@ -1,8 +1,140 @@
-/* RGB */
-.wrapper {
+/* colors */
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video {
+  border: 0;
+  font: inherit;
+  font-size: 14px;
+  margin: 0;
+  padding: 0;
+  vertical-align: baseline;
+}
+
+/* HTML5 display-role reset for older browsers */
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
+  display: block;
+}
+
+body {
+  line-height: 1.3;
+  margin: 0;
+}
+
+ol,
+ul {
+  list-style: none;
+}
+
+blockquote,
+q {
+  quotes: none;
+}
+
+blockquote:before,
+blockquote:after,
+q:before,
+q:after {
+  content: none;
+}
+
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+
+.container {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  background-color: #0c0c01;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -10,69 +142,201 @@
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  height: 100%;
-  padding: 10px 0 20px 0;
-}
-
-.wrapper h1 {
-  color: #4464ad;
-  font-size: 3.6rem;
-  font-weight: bold;
-  text-shadow: 2px 2px #a4b0f5;
-}
-
-.wrapper #date {
-  font-size: 2.4rem;
-}
-
-.wrapper img {
-  width: 50%;
-  height: 50vh;
-  margin: 10px 0 10px 0;
-}
-
-.wrapper .date {
-  font-size: 2rem;
-  color: #4464ad;
-  margin-right: 5px;
-}
-
-.wrapper .date-wrapper {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
+  align-items: center;
+  -ms-flex-item-align: center;
+      align-self: center;
+  width: 100%;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  height: 100%;
 }
 
-.wrapper p {
-  font-size: 1.2rem;
-  width: 50%;
-  font-family: "Montserrat";
-  color: #4464ad;
-  background-color: #fffff2;
-}
-
-.wrapper .hidden {
+.container .hidden {
   display: none;
 }
 
-.wrapper .show {
-  display: block;
+.container .show {
   cursor: pointer;
-}
-
-.wrapper form {
   display: -webkit-box;
   display: -ms-flexbox;
+  display: flex;
+}
+
+.container .up {
+  margin-bottom: 5rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-item-align: center;
+      align-self: center;
+}
+
+.container .up h1 {
+  color: #a16306;
+  font-size: 3.6rem;
+  font-weight: bold;
+  margin-top: 5rem;
+  padding: 0 5rem;
+  max-width: 30rem;
+}
+
+@media (max-width: 600px) {
+  .container .up h1 {
+    font-size: 2.3em;
+    max-width: 20rem;
+    margin: 1rem 3rem;
+  }
+}
+
+.container .middle-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   display: flex;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  -ms-flex-item-align: center;
+      align-self: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  width: 100%;
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+}
+
+.container .middle-container .first {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -ms-flex-item-align: center;
+      align-self: center;
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+}
+
+@media (max-width: 600px) {
+  .container .middle-container .first {
+    font-size: 2.3em;
+    max-width: 27rem;
+    margin: 1rem 3rem;
+  }
+}
+
+.container .middle-container .first .date-container {
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.container .middle-container .first .date-container .date {
+  -ms-flex-item-align: end;
+      align-self: flex-end;
+  color: #a16306;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  font-size: 1.3rem;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+}
+
+.container .middle-container .first h3 {
+  color: #a16306;
+  font-weight: bold;
+  margin-bottom: 1rem;
+}
+
+.container .middle-container .first p {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-item-align: center;
+      align-self: center;
+  background-color: #0c0c01;
+  color: #a16306;
+  font-size: 1.2rem;
+  max-width: 40rem;
+}
+
+.container .middle-container .second {
+  -ms-flex-item-align: center;
+      align-self: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.container .middle-container .second img {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-item-align: center;
+      align-self: center;
+  height: 20rem;
+  margin: 0;
+  max-width: 40rem;
+  margin-top: 3rem;
+}
+
+@media (max-width: 700px) {
+  .container .middle-container .second img {
+    font-size: 2.3em;
+    max-width: 20rem;
+    max-height: 15rem;
+    margin: 1rem 3rem;
+  }
+}
+
+.container .middle-container .second p {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-item-align: center;
+      align-self: center;
+  color: #a16306;
+  font-size: 2rem;
+  margin-top: 3rem;
+}
+
+.container .bottom {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
@@ -80,30 +344,52 @@
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin: 5rem 10rem;
+  height: 100%;
+  width: 100%;
 }
 
-.wrapper form input {
-  height: 30px;
-  cursor: pointer;
-  font-size: 1rem;
-  text-align: center;
-  color: #4464ad;
-}
-
-.wrapper form .dateSelector {
-  height: 40px;
-  color: #fffff2;
-  background-color: #4464ad;
+.container .bottom button.date-picker {
+  background-color: #a16306;
   border-radius: 5px;
-  margin-top: 15px;
+  color: #0c0c01;
   font-size: 1.2rem;
-  margin-bottom: 10px;
+  height: 5rem;
+  margin-top: 15px;
 }
 
-.wrapper form span {
-  margin-right: 2px;
-  color: #4464ad;
-  font-size: 1.4rem;
+.container .bottom button.date-picker span {
+  color: #0c0c01;
+  font-weight: bold;
   cursor: pointer;
+  font-size: 2rem;
+  height: 4rem;
 }
-/*# sourceMappingURL=card.css.map */
+
+.container .bottom form {
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin-top: 3rem;
+}
+
+.container .bottom form input {
+  color: #a16306;
+  cursor: pointer;
+  font-size: 3rem;
+  text-align: center;
+}
+/*# sourceMappingURL=Card.css.map */
