--- a/src/components/Card/Card.scss
+++ b/src/components/Card/Card.scss
@@ -137,6 +137,21 @@ table {
   border-spacing: 0;
 }
 
+html {
+  .react-datepicker {
+    background-color: $dark-orange;
+    bottom: 13rem;
+    right: 50%;
+    .react-datepicker__header {
+      background-color: #b99954;
+
+     
+    }
+     .react-datepicker__triangle {
+        display: none;
+      }
+  }
+}
 .container {
   align-items: center;
   background-color: $black;
@@ -146,8 +161,7 @@ table {
   align-self: center;
   justify-content: center;
   height: 100%;
-  flex: 1;
-  
+  width: 100%;
 
   .hidden {
     display: none;
@@ -159,13 +173,11 @@ table {
   }
 
   .up {
-    margin-bottom: 5rem;
+    margin-bottom: 2rem;
     display: flex;
     flex-direction: column;
     align-items: center;
     align-self: center;
-    
-     
 
     h1 {
       color: $dark-orange;
@@ -173,22 +185,16 @@ table {
       font-weight: bold;
       margin-top: 2rem;
       padding: 2rem;
-      width: 21rem;
-     
+      width: 18rem;
 
       @media (min-width: 500px) {
         font-size: 1.8em;
         width: 25rem;
-        
-        
       }
-       @media (min-width: 800px){
+      @media (min-width: 800px) {
         font-size: 2rem;
         width: 40rem;
-        
-
-
-        }
+      }
     }
   }
 
@@ -199,22 +205,34 @@ table {
     align-items: center;
     align-self: center;
     justify-content: center;
-    width: 25rem;
-     
+    width: 18rem;
+
+    @media (min-width: 500px) {
+      width: 30rem;
+    }
+    @media (min-width: 800px) {
+      width: 40rem;
+    }
+
+    img {
+      display: flex;
+      align-self: center;
+      width: calc(30rem / 1.2);
+      height: calc(20rem / 1.2);
+
+      margin-bottom: 2rem;
+      width: 22rem;
 
       @media (min-width: 500px) {
-        width: 30rem;
-        
-        
+        width: calc(30rem / 1);
+        height: calc(20rem / 1);
       }
-       @media (min-width: 800px){
-        width: 40rem;
-        
+      @media (min-width: 800px) {
+        width: calc(30rem / 0.67);
+        height: calc(20rem / 0.67);
+      }
+    }
 
-
-        }
-  
-    
     flex: 1;
 
     .first {
@@ -225,7 +243,6 @@ table {
 
       @media (min-width: 500px) {
         font-size: 2.3em;
-       
       }
 
       .date-container {
@@ -241,10 +258,8 @@ table {
           margin-bottom: 1rem;
           justify-content: flex-end;
 
-          @media (min-width: 500px){
-          font-size: 1.2rem;
-
-
+          @media (min-width: 500px) {
+            font-size: 1.2rem;
           }
         }
       }
@@ -255,10 +270,8 @@ table {
         font-weight: bold;
         margin-bottom: 1rem;
 
-         @media (min-width: 500px){
-        font-size: 1.3rem;
-
-
+        @media (min-width: 500px) {
+          font-size: 1.3rem;
         }
       }
       p {
@@ -267,21 +280,13 @@ table {
         background-color: $black;
         color: $dark-orange;
         font-size: 1.1rem;
-        
-        
-        
 
-        @media (min-width: 500px){
-        font-size: 1.2rem;
-        
-
-
+        @media (min-width: 500px) {
+          font-size: 1.2rem;
         }
-        @media (min-width: 800px){
-        font-size: 1.3rem;
-        width: 40rem;
-
-
+        @media (min-width: 800px) {
+          font-size: 1.3rem;
+          width: 40rem;
         }
       }
     }
@@ -291,24 +296,6 @@ table {
       display: flex;
       flex: 1;
       flex-direction: column;
-
-      img {
-        display: flex;
-        align-self: center;
-        width: calc(30rem / 1.2);
-        height: calc(20rem / 1.2);
-
-        margin-top: 3rem;
-
-        @media (min-width: 500px) {
-          width: calc(30rem / 1);
-          height: calc(20rem / 1);
-        }
-        @media (min-width: 800px) {
-          width: calc(30rem / 0.67);
-          height: calc(20rem / 0.67);
-        }
-      }
 
       p {
         display: flex;
@@ -325,7 +312,7 @@ table {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin: 2rem 10rem;
+    margin: 0rem 10rem;
     height: 100%;
     width: 100%;
 
@@ -358,24 +345,23 @@ table {
         cursor: pointer;
         font-size: 3rem;
         text-align: center;
-         background-color: $dark-orange;
-      border-radius: 5px;
-      color: $black;
-      font-size: 1.2rem;
-      height: 4rem;
-      margin-top: 5px;
+        background-color: $dark-orange;
+        border-radius: 5px;
+        color: $black;
+        font-size: 1.2rem;
+        height: 4rem;
+        margin-top: 5px;
       }
     }
   }
-  footer{
-      p {
-        display: flex;
-        align-self: center;
-        color: $dark-orange;
-        font-size: 1rem;
-        margin-top: 3rem;
-        padding: 1.2rem;
-      }
+  footer {
+    p {
+      display: flex;
+      align-self: center;
+      color: $dark-orange;
+      font-size: 1rem;
+      margin-top: 0rem;
+      padding: 1.2rem;
+    }
   }
 }
-
