--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -144,6 +144,14 @@ html .react-datepicker .react-datepicker__triangle {
   display: none;
 }
 
+html .react-datepicker__day--selected {
+  background-color: #b99954;
+}
+
+html .react-datepicker__day--selected:hover {
+  background-color: #b98a25;
+}
+
 .container {
   -webkit-box-align: center;
       -ms-flex-align: center;
