--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -393,9 +393,15 @@ html .react-datepicker__day--selected:hover {
 
 .container .middle-container .first h3 {
   color: #a16306;
-  font-size: 1.2rem;
+  font-size: 1.1rem;
   font-weight: bold;
   margin-bottom: 1rem;
+}
+
+@media (min-width: 400px) {
+  .container .middle-container .first h3 {
+    font-size: 1.2rem;
+  }
 }
 
 @media (min-width: 500px) {
@@ -413,7 +419,14 @@ html .react-datepicker__day--selected:hover {
   background-color: #0c0c01;
   color: #a16306;
   font-size: 1.1rem;
-  width: 23rem;
+  width: 20rem;
+}
+
+@media (min-width: 400px) {
+  .container .middle-container .first p {
+    font-size: 1.2rem;
+    width: 23rem;
+  }
 }
 
 @media (min-width: 500px) {
